--- a/array-grid/index.html
+++ b/array-grid/index.html
@@ -5,14 +5,23 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <title>Array Grid Experiment</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <div class="array-grid">
-
+      <div class="col1">
+         <div class="box box1"></div>
+         <div class="box box2"></div>
+      </div>
+      <div class="col2">
+         <div class="box box3"></div>
+         <div class="box box4"></div>
+      </div>
    </div>
 
    <script>
-      
+      const boxes = document.getElementsByClassName("box");
+      console.log(boxes)
    </script>
 </body>
 </html>
