--- a/array-grid/index.html
+++ b/array-grid/index.html
@@ -8,20 +8,65 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <div class="array-grid">
+   <button id="test-button">Test button</button>
+   <div class="array-grid" id="array-grid">
       <div class="col1">
-         <div class="box box1"></div>
-         <div class="box box2"></div>
+         <div class="box box1">2</div>
+         <div class="box box2">3</div>
       </div>
       <div class="col2">
-         <div class="box box3"></div>
-         <div class="box box4"></div>
+         <div class="box box3">4</div>
+         <div class="box box4">5</div>
       </div>
    </div>
 
    <script>
+      const arrayGrid = document.getElementById("array-grid");
+      const numbers = [1,2,3,4];
       const boxes = document.getElementsByClassName("box");
-      console.log(boxes)
+      const testButton = document.getElementById("test-button");
+      testButton.addEventListener('click', createGrid); 
+      let box1 = 10;
+      let box2 = 20;
+      let box3 = 30;
+      let box4 = 40;
+
+      for (i=0; i<boxes.length; i++) {
+         boxes[i].addEventListener('click', boxClicked);
+      }
+
+      function createGrid() {
+
+      }
+      
+
+      let boxValue = 1;
+      let lastValue = 1;
+      function boxClicked(e) {
+         // for (i=0; i<boxes.length; i++) {
+            // if (e.target.className == `box box${i}`) {
+               boxValue = e.target.innerHTML;
+               lastValue = boxValue;
+               console.log(boxValue);
+               e.target.innerHTML = lastValue + boxValue;
+               // }
+            // }
+         // if (e.target.className == 'box box1'){
+         //    e.target.innerHTML = `${box1}`;
+         //    console.log(1);
+         // } else if (e.target.className == 'box box2'){
+         //    console.log(2);
+         // } else if (e.target.className == 'box box3'){
+         //    console.log(3);
+         // } else if (e.target.className == 'box box4'){
+         //    console.log(4);
+         // }
+         console.log(e.target);
+      }
+
+      function numberAssignment(boxes, numbers) {
+         
+      }
    </script>
 </body>
 </html>
